fix(ui issue): Fix minor ui issue causing scrollbars to appear

--- a/src/app/shared/panel/panel.component.styl
+++ b/src/app/shared/panel/panel.component.styl
@@ -12,6 +12,11 @@ $igo-panel-header-height = 40px;
 .igo-panel-header h3 {
   margin-top: 0px;
   margin-bottom: 0px;
+  height: $igo-panel-header-height;
+}
+
+.igo-panel-header >>> button {
+  height: $igo-panel-header-height;
 }
 
 .igo-panel-header >>> [panelleftbutton] {
@@ -33,5 +38,5 @@ $igo-panel-header-height = 40px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  padding: 8px 0;
+  padding: 9px 0;
 }
